5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1863_1285.log
== TEST (2019-07-02 11:03:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Vetor: ")))
x = array([4,5,2],[3,2,2],[2,3,3])
total = dot(inv(mat),x.T)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:04:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Vetor: ")))
x = array([4,5,2],[3,2,2],[2,3,3])
total = dot(inv(mat),x.T)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:04:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Vetor: ")))
x = array([[4,5,2],[3,2,2],[2,3,3]])
total = dot(inv(mat),x.T)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Vetor: ")))
x = array([[4,5,2],[3,2,2],[2,3,3]])
total = dot(inv(x),mat.T)
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Vetor: ")))
x = array([[4,5,2],[3,2,2],[2,3,3]])
total = dot(inv(x),mat.T)
print(round(total,0)
-- ERROR:
File "XXXX", line 7
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:05:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Vetor: ")))
x = array([[4,5,2],[3,2,2],[2,3,3]])
total = dot(inv(x),mat.T)
print(round(total,0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Vetor: ")))
x = array([[4,5,2],[3,2,2],[2,3,3]])
total = dot(inv(x),mat.T)
print("grande: ",round(total[0],0)
-- ERROR:
File "XXXX", line 7
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:07:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Vetor: ")))
x = array([[4,5,2],[3,2,2],[2,3,3]])
total = dot(inv(x),mat.T)
print("grande: ",round(total[0],0))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:08:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Vetor: ")))
x = array([[4,5,2],[3,2,2],[2,3,3]])
total = dot(inv(x),mat.T)
print("grande: ",round(total[0],0))
print("medio: ",round(total[1],0))
print("medio: ",round(total[2],0))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:10:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Vetor: ")))
x = array([[4,5,2],[3,2,2],[2,3,3]])
total = dot(inv(x),mat.T)
print("grande: ",round(total[0],0))
print("medio: ",round(total[1],0))
print("pequeno: ",round(total[2],0))
if max(total) == total[0]:
	print("grande")
elif max(total) == total[1]:
	print("medio")
else:
	print("pequeno")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:10:55) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Vetor: ")))
x = array([[4,5,2],[3,2,2],[2,3,3]])
total = dot(inv(x),mat.T)
print("grande: ",round(total[0],0))
print("medio: ",round(total[1],0))
print("pequeno: ",round(total[2],0))
if max(total) == total[0]:
	print("grande")
elif max(total) == total[1]:
	print("medio")
else:
	print("pequeno")

-- EXECUTION TIME:
0.779264
-- TEST CASE 1:
---- input:
[2220,1443,1887]
---- correct output:
grande: 111.0
medio: 222.0
pequeno: 333.0
pequeno
---- user output:
grande:  111.0
medio:  222.0
pequeno:  333.0
pequeno
-- TEST CASE 2:
---- input:
[1340,840,760]
---- correct output:
grande: 200.0
medio: 100.0
pequeno: 20.0
grande
---- user output:
grande:  200.0
medio:  100.0
pequeno:  20.0
grande
-- TEST CASE 3:
---- input:
[1632,925,1120]
---- correct output:
grande: 107.0
medio: 200.0
pequeno: 102.0
medio
---- user output:
grande:  107.0
medio:  200.0
pequeno:  102.0
medio
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
